--- a/atividade1/HTMLs/estrutura.html
+++ b/atividade1/HTMLs/estrutura.html
@@ -6,9 +6,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="logo">
+        <img src="956_6216798_200_200.jpg" alt="logo americanas.com">
+    </div>
+    <h1>criar seu cadastro</h1>
+    <p class="primeiro">veja seus pedidos de forma fácil, compre mais rápido e tenha uma <br> experiência personalizada
+        :)</p>
+    <p class="segundo">* campos obrigatórios</p>
+    <form action="">
+        <h3>* nome completo</h3>
+
+        <input type="text" name="nome" id="nomecompleto">
+        <h3>*gênero</h3>
+        <p>pra gente te conhecer um pouquinho melhor :)</p>
+        <input type="radio" name="genero" value="feminino">
+        <label for="feminino">feminino</label>
+        <input type="radio" name="genero" value="masculino">
+        <label for="masculino">masculino</label>
+        <input type="radio" name="genero" value="não informar">
+        <label for="não informar">não informar</label>
+        <h3>*data de nascimento</h3>
+        <p>necessário para identificar a maioridade, no formato DD/MM/AAAA</p>
+        <input type="date" name="nascimento" id="nascimento">
+        <h3>*CPF</h3>
+        <p>necessário para emissão das Notas Fiscais</p>
+        <input type="text" name="cpf" id="cpf" placeholder="___.___.___-__"> <br>
+        <a href=#>é pessoa jurídica? conheça a americanas empresas</a>
+        <h3>*telefone</h3>
+        <p>caso a gente precise entrar em contato sobre seus pedidos</p>
+        <input type="text" name="telefone" id="telefone" placeholder="(__)-____-_____"><br>
+        <input type="checkbox" name="check" id="check">
+        <label for="check">receber notificações por whatsapp</label>
+        <h3>*e-mail</h3>
+        <input type="text"><br>
+        <input type="checkbox" name="email" id="email">
+        <label for="email">receber e-mails promocionais</label>
+        <h3>*senha</h3>
+        <p>precisa ter entre 6 e 20 caracteres</p>
+        <input type="password" name="senha" id="senha"> <br>
+        <input type="checkbox" name="dados" id="dados">
+        <label for="dados">compartilhar meus dados com parceiros para ter <br> conteúdos personalizados, veja <a
+                href="#">como funciona</a></label> <br>
+        <input type="submit" value="criar seu cadastro">
+
+        <p>Não se preocupe, nosso site é seguro! Ao criar seu cadastro, <br> você concorda com a nossa <a
+                href="https://www.americanas.com.br/hotsite/politica-de-privacidade"><b>Política de Privacidade</b></a>
+        </p>
+
+        <p>Já tem cadastro? <a href="https://cliente.americanas.com.br/simple-login/">entar</a></p>
+
+    </form>
 
 </body>
 
